# taskd

./: Cargo.toml  PLANS.md  README.md  SKILL.md  task.md  todo.md
.agents/skills/taskd/: SKILL.md
.github/workflows/: release.yml
config/: artifacts.yaml  taskd.env.example  tasks.yaml
deploy/: install.sh  taskd.service
src/: artifact_cli.rs  artifacts.rs  cli.rs  config.rs  config_path.rs  daemon_cli.rs  history.rs  lib.rs  main.rs  notifications.rs  runtime_paths.rs  scheduler.rs  state.rs  task_runner.rs
tests/: artifact_cli_integration.rs  cli_integration.rs
