[package]
name = "taskd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive"] }
cron = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.44", features = ["macros", "process", "rt-multi-thread", "signal", "time"] }
tokio-cron-scheduler = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"
